# Cuda-learning

./: README.md
cuda_runtime_test/: CMakeLists.txt  kernel.cu  main.cpp
